# NI-RSeries

./: .gitignore  LICENSE  README.md
LabView/: SimpleDigitizer.lvproj  SimpleDigitizer_VI.vi
lib/: CMakeLists.txt  NiFpga_FPGA_VI.h  NiFpga_SimpleDigitizer_VI.h  bbn-ni-r.jl  libbbn-ni-r.cpp  libbbn-ni-r.h  main.cpp
